add to examples

--- a/notebooks/featurestore/hsfs/online_featurestore/3_stream-ingestion.ipynb
+++ b/notebooks/featurestore/hsfs/online_featurestore/3_stream-ingestion.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "822d865e",
+   "id": "158cf7c4",
    "metadata": {},
    "source": [
     "---\n",
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "552e4f28",
+   "id": "3f623b8d",
    "metadata": {},
    "source": [
     "## Import necessary libraries"
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "cb4be081",
+   "id": "c0e74a65",
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
      "data": {
       "text/html": [
        "<table>\n",
-       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>2</td><td>application_1619309085643_0003</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8089/proxy/application_1619309085643_0003/\">Link</a></td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8044/node/containerlogs/container_1619309085643_0003_01_000001/OnlineFSdemo__meb10000\">Link</a></td></tr></table>"
+       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>1</td><td>application_1620686564138_0002</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8089/proxy/application_1620686564138_0002/\">Link</a></td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8044/node/containerlogs/container_1620686564138_0002_01_000001/onlinefsdemo__meb10000\">Link</a></td></tr></table>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "79db207a",
+   "id": "f7d32ea3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f3642eb",
+   "id": "98131074",
    "metadata": {},
    "source": [
     "## Create a stream from the kafka topic\n"
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ce81a233",
+   "id": "5d5c4653",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "3694e56c",
+   "id": "ac139428",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "435c2f2e",
+   "id": "a1a46500",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "16aa9413",
+   "id": "974d5d78",
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "74fed8e4",
+   "id": "fc8fb713",
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e649ce71",
+   "id": "e8569b9e",
    "metadata": {},
    "source": [
     "## Create windowing aggregations over different time windows using spark streaming."
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "4c0be2e5",
+   "id": "cd25fb4c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "fd4974fc",
+   "id": "c17039c1",
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "a616b44e",
+   "id": "0d24ae78",
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "e4095702",
+   "id": "2f17da8d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +258,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "8a34ee8c",
+   "id": "d4e79d45",
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +276,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "358afe02",
+   "id": "f75ee2b0",
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "5fbb3862",
+   "id": "cac528ba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "21cd49a1",
+   "id": "0f3885e7",
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "943154c4",
+   "id": "67215fe2",
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49f461cd",
+   "id": "b3ec05c8",
    "metadata": {},
    "source": [
     "### Establish a connection with your Hopsworks feature store."
@@ -363,7 +363,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "f88e1112",
+   "id": "3a8b8bec",
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc0b5927",
+   "id": "bcde7ec5",
    "metadata": {},
    "source": [
     "## Get feature groups from hopsworks feature store."
@@ -392,7 +392,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "35492fc8",
+   "id": "6c7fe2bc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e4af9db",
+   "id": "c53a8d30",
    "metadata": {},
    "source": [
     "## Insert streaming dataframes to the online feature group\n",
@@ -415,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "7e5f986b",
+   "id": "c46f1c20",
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +433,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "ff8da18a",
+   "id": "00df46c5",
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +451,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "22d0d925",
+   "id": "146a5566",
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75956f8f",
+   "id": "73e0f3d9",
    "metadata": {},
    "source": [
     "### Check if spark streaming query is active"
@@ -476,8 +476,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "a7aff267",
+   "execution_count": 22,
+   "id": "385e30e6",
    "metadata": {},
    "outputs": [
     {
@@ -494,8 +494,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "d9fb7e92",
+   "execution_count": 23,
+   "id": "781683d3",
    "metadata": {},
    "outputs": [
     {
@@ -512,8 +512,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "df1f159b",
+   "execution_count": 24,
+   "id": "ad3f8ed2",
    "metadata": {},
    "outputs": [
     {
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a12dbdf",
+   "id": "83583bae",
    "metadata": {},
    "source": [
     "#### We can also check status of a query and if there are any exceptions trown."
@@ -538,8 +538,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "dcd88cac",
+   "execution_count": 27,
+   "id": "06d36130",
    "metadata": {},
    "outputs": [
     {
@@ -556,8 +556,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "71df475f",
+   "execution_count": 28,
+   "id": "b79635f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19f6df5b",
+   "id": "f9ffde32",
    "metadata": {},
    "source": [
     "### Lets check if data was ingested in to the online feature store"
@@ -574,8 +574,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "4745a34a",
+   "execution_count": 31,
+   "id": "da596366",
    "metadata": {},
    "outputs": [
     {
@@ -616,8 +616,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "33f75d52",
+   "execution_count": 32,
+   "id": "f9d58f4a",
    "metadata": {},
    "outputs": [
     {
@@ -634,7 +634,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a456f2d2",
+   "id": "7918c363",
    "metadata": {},
    "source": [
     "## Insert data in to offline feature group.\n",
@@ -643,8 +643,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "9018c73b",
+   "execution_count": 33,
+   "id": "84addd50",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -658,19 +658,18 @@
     "    \"hoodie.parquet.compression.ratio\":\"0.5\"\n",
     "    }\n",
     "    # Transform and write batchDF\n",
-    "    card_transactions.insert(batchDF,write_options=extra_hudi_options)\n",
+    "    card_transactions.insert(batchDF,write_options=extra_hudi_options, storage=\"offline\")\n",
     "    batchDF.unpersist()\n",
     "\n",
     "hudi_card = df_deser.writeStream.foreachBatch(foreach_batch_function_card)\\\n",
     "                    .option(\"checkpointLocation\", hdfs.project_path() + \"/Resources/checkpoint-card\")\\\n",
-    "                    .trigger(processingTime=\"10 seconds\")\\\n",
     "                    .start()    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "87422b85",
+   "execution_count": 34,
+   "id": "e30bfb38",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -684,19 +683,18 @@
     "    \"hoodie.parquet.compression.ratio\":\"0.5\"\n",
     "    }\n",
     "    # Transform and write batchDF\n",
-    "    card_transactions_10m_agg.insert(batchDF,write_options=extra_hudi_options)\n",
+    "    card_transactions_10m_agg.insert(batchDF,write_options=extra_hudi_options, storage=\"offline\")\n",
     "    batchDF.unpersist()\n",
     "\n",
     "hudi_10m = windowed10mSignalDF.writeStream.foreachBatch(foreach_batch_function_10m)\\\n",
     "                              .option(\"checkpointLocation\", hdfs.project_path() + \"/Resources/checkpoint-data10m\")\\\n",
-    "                              .trigger(processingTime=\"10 seconds\")\\\n",
     "                              .start()    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "80247c31",
+   "execution_count": 35,
+   "id": "b9f0b4f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -710,19 +708,18 @@
     "    \"hoodie.parquet.compression.ratio\":\"0.5\"\n",
     "    }\n",
     "    # Transform and write batchDF\n",
-    "    card_transactions_1h_agg.insert(batchDF,write_options=extra_hudi_options)\n",
+    "    card_transactions_1h_agg.insert(batchDF,write_options=extra_hudi_options, storage=\"offline\")\n",
     "    batchDF.unpersist()\n",
     "\n",
     "hudi_1h = windowed1hSignalDF.writeStream.foreachBatch(foreach_batch_function_1h)\\\n",
     "                            .option(\"checkpointLocation\", hdfs.project_path() + \"/Resources/checkpoint-1h\")\\\n",
-    "                            .trigger(processingTime=\"10 seconds\")\\\n",
     "                            .start()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "51c1f377",
+   "execution_count": 36,
+   "id": "9ae34a9d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -736,18 +733,17 @@
     "    \"hoodie.parquet.compression.ratio\":\"0.5\"\n",
     "    }\n",
     "    # Transform and write batchDF\n",
-    "    card_transactions_12h_agg.insert(batchDF,write_options=extra_hudi_options)\n",
+    "    card_transactions_12h_agg.insert(batchDF,write_options=extra_hudi_options, storage=\"offline\")\n",
     "    batchDF.unpersist()\n",
     "\n",
     "hudi_12h = windowed12hSignalDF.writeStream.foreachBatch(foreach_batch_function_12h)\\\n",
     "                              .option(\"checkpointLocation\", hdfs.project_path() + \"/Resources/checkpoint-12h\")\\\n",
-    "                              .trigger(processingTime=\"10 seconds\")\\\n",
     "                              .start()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "733d5ca7",
+   "id": "f5123cb6",
    "metadata": {},
    "source": [
     "### Check if queries are still active"
@@ -755,8 +751,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "b4f2eb70",
+   "execution_count": 45,
+   "id": "eec17344",
    "metadata": {},
    "outputs": [
     {
@@ -773,8 +769,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "667a24b2",
+   "execution_count": 46,
+   "id": "fb6fb102",
    "metadata": {},
    "outputs": [
     {
@@ -791,8 +787,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "62deb484",
+   "execution_count": 47,
+   "id": "94c18663",
    "metadata": {},
    "outputs": [
     {
@@ -809,8 +805,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "62301af9",
+   "execution_count": 48,
+   "id": "76dbf96d",
    "metadata": {},
    "outputs": [
     {
@@ -827,7 +823,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4dd4b2bc",
+   "id": "dac57bf0",
    "metadata": {},
    "source": [
     "### Stop queries\n",
@@ -837,7 +833,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "95340e46",
+   "id": "c8ac956e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -849,7 +845,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "69217b73",
+   "id": "7400dcbd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -862,7 +858,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8fa788d1",
+   "id": "c17368b4",
    "metadata": {},
    "outputs": [],
    "source": []
