--- a/notebooks/featurestore/aws/redshift/Redshift_spark.ipynb
+++ b/notebooks/featurestore/aws/redshift/Redshift_spark.ipynb
@@ -164,7 +164,7 @@
    ],
    "source": [
     "// Retrieve the storage connector defined before\n",
-    "val redshiftConn = fs.getStorageConnector(\"telco_redshift_cluster\")"
+    "val redshiftConn = fs.getRedshiftConnector(\"telco_redshift_cluster\")"
    ]
   },
   {
