--- a/notebooks/featurestore/hsfs/snowflake/scala.ipynb
+++ b/notebooks/featurestore/hsfs/snowflake/scala.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "previous-technician",
+   "id": "bf87432b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eleven-treasurer",
+   "id": "de80a953",
    "metadata": {},
    "source": [
     "## Snowflake (On-Demand) Feature Group \n",
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "resistant-candidate",
+   "id": "ca067a1b",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "wanted-springer",
+   "id": "9750cc8a",
    "metadata": {},
    "outputs": [
     {
@@ -88,19 +88,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "surprised-edgar",
+   "id": "8e794edd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "val snowflakeConn = fs.getStorageConnector(\"sfconnector\")\n",
-    "var sfOptions = snowflakeConn.getSparkOptionsInt\n",
+    "val snowflakeConn = fs.getSnowflakeConnector(\"sfconnector\")\n",
+    "var sfOptions = snowflakeConn.sparkOptions\n",
     "sfOptions.put(\"query\", \"select * from TELCO\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "needed-vertex",
+   "id": "9927e151",
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "canadian-employment",
+   "id": "007f553a",
    "metadata": {},
    "source": [
     "### External (On-Demand) Feature Group\n",
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "signal-protection",
+   "id": "0014f80c",
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "printable-wholesale",
+   "id": "e71f41bf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "intelligent-ready",
+   "id": "3ffbfb6f",
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aquatic-factor",
+   "id": "3039d827",
    "metadata": {},
    "outputs": [],
    "source": []
