--- a/notebooks/featurestore/hsfs/online_featurestore/0_create_kafka_topic.ipynb
+++ b/notebooks/featurestore/hsfs/online_featurestore/0_create_kafka_topic.ipynb
@@ -2,7 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "68ac1032",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "title: \"Create a Kafka topic\"\n",
+    "date: 2021-04-25\n",
+    "type: technical_note\n",
+    "draft: false\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Create a Kafka topic\n",
@@ -22,7 +33,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68faedc7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -30,18 +40,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "PySpark",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "pysparkkernel"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
-    "name": "python",
+    "name": "ipython",
     "version": 3
    },
+   "file_extension": ".py",
    "mimetype": "text/x-python",
-   "name": "pyspark",
-   "pygments_lexer": "python3"
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
