--- a/notebooks/featurestore/hsfs/online_transformations/online_transformations.ipynb
+++ b/notebooks/featurestore/hsfs/online_transformations/online_transformations.ipynb
@@ -35,7 +35,7 @@
      "data": {
       "text/html": [
        "<table>\n",
-       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>22</td><td>application_1621263126797_0002</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8089/proxy/application_1621263126797_0002/\">Link</a></td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8044/node/containerlogs/container_e06_1621263126797_0002_01_000001/transformations__meb10000\">Link</a></td></tr></table>"
+       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>9</td><td>application_1621853749763_0010</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8089/proxy/application_1621853749763_0010/\">Link</a></td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8044/node/containerlogs/container_1621853749763_0010_01_000001/test__meb10000\">Link</a></td></tr></table>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -75,11 +75,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from hsfs_transformers import transformer\n",
-    "plus_one_float = fs.create_transformation_function(transformation_function=transformer.plus_one, \n",
-    "                                                   output_type=float, \n",
-    "                                                   version=1)\n",
-    "plus_one_float.save()"
+    "from hsfs_transformers import transformers\n",
+    "plus_one_float_meta = fs.create_transformation_function(transformation_function=transformers.plus_one, \n",
+    "                                                        output_type=float, \n",
+    "                                                        version=1)\n",
+    "plus_one_float_meta.save()"
    ]
   },
   {
@@ -88,10 +88,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plus_one_int = fs.create_transformation_function(transformation_function=transformer.plus_one, \n",
-    "                                                 output_type=int, \n",
-    "                                                 version=2)\n",
-    "plus_one_int.save()"
+    "plus_one_int_meta = fs.create_transformation_function(transformation_function=transformers.plus_one, \n",
+    "                                                      output_type=int, \n",
+    "                                                      version=2)\n",
+    "plus_one_int_meta.save()"
    ]
   },
   {
@@ -100,9 +100,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plus_one_double = fs.create_transformation_function(transformation_function=transformer.plus_one, \n",
+    "plus_one_double_meta = fs.create_transformation_function(transformation_function=transformers.plus_one, \n",
     "                                                    output_type=\"double\", version=3)\n",
-    "plus_one_double.save()"
+    "plus_one_double_meta.save()"
    ]
   },
   {
@@ -111,10 +111,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "date_string_to_timestamp = fs.create_transformation_function(\n",
-    "    transformation_function=transformer.date_string_to_timestamp,\n",
-    "    output_type=\"long\", version=1)\n",
-    "date_string_to_timestamp.save()"
+    "date_string_2_timestamp_meta = fs.create_transformation_function(\n",
+    "                                            transformation_function=transformers.date_string_to_timestamp,\n",
+    "                                            output_type=\"long\", version=1)\n",
+    "date_string_2_timestamp_meta.save()"
    ]
   },
   {
@@ -133,9 +133,9 @@
     }
    ],
    "source": [
-    "print(plus_one_float.name)\n",
-    "print(plus_one_int.name)\n",
-    "print(date_string_to_timestamp.name)"
+    "print(plus_one_float_meta.name)\n",
+    "print(plus_one_int_meta.name)\n",
+    "print(date_string_2_timestamp_meta.name)"
    ]
   },
   {
@@ -154,7 +154,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[<hsfs.transformation_function.TransformationFunction object at 0x7f0988f6c910>, <hsfs.transformation_function.TransformationFunction object at 0x7f0988f6c390>, <hsfs.transformation_function.TransformationFunction object at 0x7f0988f6c790>, <hsfs.transformation_function.TransformationFunction object at 0x7f0988f6c090>]"
+      "[<hsfs.transformation_function.TransformationFunction object at 0x7fa7d8563a10>, <hsfs.transformation_function.TransformationFunction object at 0x7fa7d8563110>, <hsfs.transformation_function.TransformationFunction object at 0x7fa7d8563750>, <hsfs.transformation_function.TransformationFunction object at 0x7fa7d8563990>]"
      ]
     }
    ],
@@ -178,14 +178,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<hsfs.transformation_function.TransformationFunction object at 0x7f0988f6ccd0>"
+      "plus_one\n",
+      "1"
      ]
     }
    ],
    "source": [
-    "plus_one = fs.get_transformation_function(name=\"plus_one\")\n",
-    "print(plus_one.name)\n",
-    "print(plus_one.version)"
+    "plus_one_meta = fs.get_transformation_function(name=\"plus_one\")\n",
+    "print(plus_one_meta.name)\n",
+    "print(plus_one_meta.version)"
    ]
   },
   {
@@ -203,9 +204,9 @@
     }
    ],
    "source": [
-    "plus_one_float = fs.get_transformation_function(name=\"plus_one\", version=1)\n",
-    "print(plus_one_float.name)\n",
-    "print(plus_one_float.version)"
+    "plus_one_float_meta = fs.get_transformation_function(name=\"plus_one\", version=1)\n",
+    "print(plus_one_float_meta.name)\n",
+    "print(plus_one_float_meta.version)"
    ]
   },
   {
@@ -223,9 +224,9 @@
     }
    ],
    "source": [
-    "plus_one_int = fs.get_transformation_function(name=\"plus_one\", version=2)\n",
-    "print(plus_one_int.name)\n",
-    "print(plus_one_int.version)"
+    "plus_one_int_meta = fs.get_transformation_function(name=\"plus_one\", version=2)\n",
+    "print(plus_one_int_meta.name)\n",
+    "print(plus_one_int_meta.version)"
    ]
   },
   {
@@ -243,9 +244,9 @@
     }
    ],
    "source": [
-    "date_string_to_timestamp = fs.get_transformation_function(name=\"date_string_to_timestamp\", version=1)\n",
-    "print(date_string_to_timestamp.name)\n",
-    "print(date_string_to_timestamp.version)"
+    "date_string_2_timestamp_meta = fs.get_transformation_function(name=\"date_string_to_timestamp\", version=1)\n",
+    "print(date_string_2_timestamp_meta.name)\n",
+    "print(date_string_2_timestamp_meta.version)"
    ]
   },
   {
@@ -265,8 +266,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "import numpy as np\n",
-      "import pandas as pd\n",
       "from datetime import datetime\n",
       "from pyspark.sql.functions import udf\n",
       "from pyspark.sql.types import *\n",
@@ -278,7 +277,7 @@
     }
    ],
    "source": [
-    "print(plus_one_float.transformer_code)"
+    "print(plus_one_float_meta.transformer_code)"
    ]
   },
   {
@@ -290,8 +289,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "import numpy as np\n",
-      "import pandas as pd\n",
       "from datetime import datetime\n",
       "from pyspark.sql.functions import udf\n",
       "from pyspark.sql.types import *\n",
@@ -303,7 +300,7 @@
     }
    ],
    "source": [
-    "print(plus_one_int.transformer_code)"
+    "print(plus_one_int_meta.transformer_code)"
    ]
   },
   {
@@ -315,8 +312,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "import numpy as np\n",
-      "import pandas as pd\n",
       "from datetime import datetime\n",
       "from pyspark.sql.functions import udf\n",
       "from pyspark.sql.types import *\n",
@@ -329,7 +324,7 @@
     }
    ],
    "source": [
-    "print(date_string_to_timestamp.transformer_code)"
+    "print(date_string_2_timestamp_meta.transformer_code)"
    ]
   },
   {
@@ -341,12 +336,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "plus_one_double = fs.get_transformation_function(name=\"plus_one\", version=3)\n",
-    "plus_one_double.delete()"
+    "plus_one_double_meta = fs.get_transformation_function(name=\"plus_one\", version=3)\n",
+    "plus_one_double_meta.delete()"
    ]
   },
   {
@@ -359,36 +354,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "economy_fg = fs.get_feature_group('economy_fg',2)\n",
     "demography_fg = fs.get_feature_group('demography_fg',2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+---------+----------+---+--------------+---------+-----+------+--------+----+\n",
-      "|     loan|commission| id|      datetime|   salary|  car|hyears|  hvalue|year|\n",
-      "+---------+----------+---+--------------+---------+-----+------+--------+----+\n",
-      "| 354724.2|       0.0|  1|20200101010101|110499.73|car15|    30|235000.0|2020|\n",
-      "|395015.34|       0.0|  2|20200102010101|140893.77|car20|     2|135000.0|2020|\n",
-      "|122025.08|       0.0|  3|20200103010101|119159.65| car1|    22|145000.0|2020|\n",
-      "| 99629.62|  52593.63|  4|20200104010101|  20000.0| car9|    30|185000.0|2020|\n",
-      "+---------+----------+---+--------------+---------+-----+------+--------+----+"
-     ]
-    }
-   ],
-   "source": [
-    "economy_fg.read().show()"
    ]
   },
   {
@@ -400,15 +371,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "+---+---------+----------+-----+--------+------+---------+----+\n",
+      "| id|   salary|commission|  car|  hvalue|hyears|     loan|year|\n",
+      "+---+---------+----------+-----+--------+------+---------+----+\n",
+      "|  1|110499.73|       0.0|car15|235000.0|    30| 354724.2|2020|\n",
+      "|  2|140893.77|       0.0|car20|135000.0|     2|395015.34|2020|\n",
+      "|  3|119159.65|       0.0| car1|145000.0|    22|122025.08|2020|\n",
+      "|  4|  20000.0|  52593.63| car9|185000.0|    30| 99629.62|2020|\n",
+      "+---+---------+----------+-----+--------+------+---------+----+"
+     ]
+    }
+   ],
+   "source": [
+    "economy_fg.read().show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "root\n",
-      " |-- loan: float (nullable = true)\n",
-      " |-- commission: float (nullable = true)\n",
       " |-- id: integer (nullable = true)\n",
-      " |-- datetime: string (nullable = true)\n",
       " |-- salary: float (nullable = true)\n",
+      " |-- commission: float (nullable = true)\n",
       " |-- car: string (nullable = true)\n",
-      " |-- hyears: integer (nullable = true)\n",
       " |-- hvalue: float (nullable = true)\n",
+      " |-- hyears: integer (nullable = true)\n",
+      " |-- loan: float (nullable = true)\n",
       " |-- year: integer (nullable = true)"
      ]
     }
@@ -426,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,35 +436,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "td = fs.create_training_dataset(name=\"economy_td\",\n",
     "                               description=\"Dataset to train the some model\",\n",
     "                               data_format=\"csv\",\n",
-    "                               transformation_functions={\"hyears\":plus_one_int, \n",
-    "                                                         \"loan\":plus_one_float, \n",
-    "                                                         \"datetime\": date_string_to_timestamp},\n",
+    "                               transformation_functions={\"hyears\":plus_one_int_meta, \n",
+    "                                                         \"loan\":plus_one_float_meta},\n",
     "                               statistics_config=None, \n",
     "                               version=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'hyears': <hsfs.transformation_function.TransformationFunction object at 0x7f0988f842d0>, 'loan': <hsfs.transformation_function.TransformationFunction object at 0x7f0988f840d0>, 'datetime': <hsfs.transformation_function.TransformationFunction object at 0x7f0988f845d0>}"
-     ]
-    }
-   ],
-   "source": [
-    "td._transformation_functions"
    ]
   },
   {
@@ -482,36 +458,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "'date_string_to_timestamp'"
+      "<hsfs.training_dataset.TrainingDataset object at 0x7fa7d84f6050>"
      ]
     }
    ],
-   "source": [
-    "td._transformation_functions['datetime'].name"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'hyears': <hsfs.transformation_function.TransformationFunction object at 0x7f0988f842d0>, 'loan': <hsfs.transformation_function.TransformationFunction object at 0x7f0988f840d0>, 'datetime': <hsfs.transformation_function.TransformationFunction object at 0x7f0988f845d0>}"
-     ]
-    }
-   ],
-   "source": [
-    "td.transformation_functions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "td.save(query)"
    ]
@@ -525,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -542,14 +492,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'loan': <hsfs.transformation_function.TransformationFunction object at 0x7f5f21090510>, 'datetime': <hsfs.transformation_function.TransformationFunction object at 0x7f5f21093710>, 'hyears': <hsfs.transformation_function.TransformationFunction object at 0x7f5f21096890>}"
+      "{'hyears': <hsfs.transformation_function.TransformationFunction object at 0x7fa7d849b690>, 'loan': <hsfs.transformation_function.TransformationFunction object at 0x7fa7d849bc50>}"
      ]
     }
    ],
@@ -559,46 +509,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+---+------+--------+---------+----------+---+-------------+---------+-----+------+--------+----+\n",
-      "|age|elevel| zipcode|     loan|commission| id|     datetime|   salary|  car|hyears|  hvalue|year|\n",
-      "+---+------+--------+---------+----------+---+-------------+---------+-----+------+--------+----+\n",
-      "| 49|level2|zipcode4|122026.08|       0.0|  3|1578013261000|119159.65| car1|    23|145000.0|2020|\n",
-      "| 56|level0|zipcode2| 99630.62|  52593.63|  4|1578099661000|  20000.0| car9|    31|185000.0|2020|\n",
-      "| 54|level3|zipcode5| 354725.2|       0.0|  1|1577840461000|110499.73|car15|    31|235000.0|2020|\n",
-      "| 44|level4|zipcode8|395016.34|       0.0|  2|1577926861000|140893.77|car20|     3|135000.0|2020|\n",
-      "+---+------+--------+---------+----------+---+-------------+---------+-----+------+--------+----+"
+      "+---+------+--------+---+---------+----------+-----+--------+------+---------+----+\n",
+      "|age|elevel| zipcode| id|   salary|commission|  car|  hvalue|hyears|     loan|year|\n",
+      "+---+------+--------+---+---------+----------+-----+--------+------+---------+----+\n",
+      "| 56|level0|zipcode2|  4|  20000.0|  52593.63| car9|185000.0|    31| 99630.62|2020|\n",
+      "| 54|level3|zipcode5|  1|110499.73|       0.0|car15|235000.0|    31| 354725.2|2020|\n",
+      "| 49|level2|zipcode4|  3|119159.65|       0.0| car1|145000.0|    23|122026.08|2020|\n",
+      "| 44|level4|zipcode8|  2|140893.77|       0.0|car20|135000.0|     3|395016.34|2020|\n",
+      "+---+------+--------+---+---------+----------+-----+--------+------+---------+----+"
      ]
     }
    ],
    "source": [
     "td.read().show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### transformation functions will be also applied to feature vectores retrieved by `get_serving_vector` method"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'id'}"
+     ]
+    }
+   ],
+   "source": [
+    "td_meta = fs.get_training_dataset(\"economy_td\", 1)\n",
+    "#`init_prepared_statement` method is needed to get serving_keys in case `get_serving_vector` has not beed called yet. This is not necessary for `get_serving_vector` method itself\n",
+    "td_meta.init_prepared_statement() \n",
+    "td_meta.serving_keys"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[54, 'level3', 'zipcode5', 1, 110500.0, 0.0, 'car15', 235000.0, 31, 354725.0, 2020]"
+     ]
+    }
+   ],
+   "source": [
+    "td_meta.get_serving_vector({'id': 1})"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "PySpark",
    "language": "python",
-   "name": "python3"
+   "name": "pysparkkernel"
   },
   "language_info": {
    "codemirror_mode": {
-    "name": "ipython",
+    "name": "python",
     "version": 3
    },
-   "file_extension": ".py",
    "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "name": "pyspark",
+   "pygments_lexer": "python3"
   }
  },
  "nbformat": 4,
