--- a/notebooks/featurestore/hsfs/online_transformations/online_transformations.ipynb
+++ b/notebooks/featurestore/hsfs/online_transformations/online_transformations.ipynb
@@ -65,8 +65,7 @@
    "metadata": {},
    "source": [
     "# Define online transformation\n",
-    "#### Online tranformation function has to be part of library installed in Hopsworks. Please refer to [documenation](https://hopsworks.readthedocs.io/en/stable/user_guide/hopsworks/python.html?highlight=install#installing-libraries) how to install python libraries in Hopsworks. For this demo we intalled library from [this](https://github.com/davitbzh/hsfs-transformer-template) repository.\n",
-    "#### When defining transformation function don't decorate with spark `@udf` or `@pandas_udfs`, as well as don't use any spark dependecies. HSFS will apply decorations if it used inside spark application."
+    "To be able to attach transformation function to training datasets it has to be part of library installed in Hopsworks. Please refer to [documentation](https://hopsworks.readthedocs.io/en/stable/user_guide/hopsworks/python.html?highlight=install#installing-libraries) how to install python libraries in Hopsworks. When defining transformation function don't decorate with spark @udf or @pandas_udfs, as well as don't use any spark dependencies. HSFS will decorate transformation function only if it is used inside spark application.\n"
    ]
   },
   {
@@ -431,7 +430,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Provide transformation functions as dict, where key is feature name and value online transformation function name    "
+    "#### Provide transformation functions as dict, where key is feature name and value is online transformation function name    "
    ]
   },
   {
