--- a/notebooks/featurestore/hsfs/online_featurestore/1_create_feature_groups.ipynb
+++ b/notebooks/featurestore/hsfs/online_featurestore/1_create_feature_groups.ipynb
@@ -58,7 +58,7 @@
    "metadata": {},
    "source": [
     "# Create empty feature groups \n",
-    "In this demo exaple we are expecting to recieve data from Kafka topic, read using spark streaming, do streamig aggregations and ingest aggregated data to feature groups. Thus we will create empy feature groups where we will ingest streaming data."
+    "In this demo example we are expecting to recieve data from Kafka topic, read using spark streaming, do streamig aggregations and ingest aggregated data to feature groups. Thus we will create empy feature groups where we will ingest streaming data."
    ]
   },
   {
