disable validation_type in python example for hsfs

--- a/notebooks/featurestore/gcp/colab.ipynb
+++ b/notebooks/featurestore/gcp/colab.ipynb
@@ -188,6 +188,7 @@
     "import pandas as pd\n",
     "try:\n",
     "    name_country_fg = fs.get_feature_group(name=\"name_country_fg\",version=1)\n",
+    "    print(\"name_country_fg found in feature store\")\n",
     "except Exception as e: \n",
     "    url = \"https://repo.hops.works/dev/jdowling/data_cleaned_train.csv\"\n",
     "    df = pd.read_csv(url, sep=\";\")\n",
@@ -195,10 +196,11 @@
     "                                    version=1,\n",
     "                                    primary_key=['first_name', 'last_name'],\n",
     "                                    description=\"Name - Country prediction\",\n",
-    "                                    validation_type=\"STRICT\",\n",
+    "#                                    validation_type=\"STRICT\",\n",
     "                                    time_travel_format=\"HUDI\",\n",
     "                                    online_enabled=True,                                        \n",
     "                                    statistics_config=True)\n",
+    "    print(\"Created name_country_fg in the feature store\")\n",
     "    name_country_fg.save(df)"
    ]
   },
