[HOPSWORKS-2583] Experiment mnist notebook should work in airgapped environment

--- a/notebooks/ml/Experiment/Tensorflow/mnist.ipynb
+++ b/notebooks/ml/Experiment/Tensorflow/mnist.ipynb
@@ -97,14 +97,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "def keras_mnist():\n",
+    "    \n",
+    "    import os\n",
+    "    import sys\n",
+    "    import uuid\n",
+    "    import random\n",
+    "    \n",
+    "    import numpy as np\n",
+    "    \n",
     "    from tensorflow import keras\n",
     "    import tensorflow as tf\n",
-    "    from tensorflow.keras.datasets import mnist\n",
     "    from tensorflow.keras.models import Sequential\n",
     "    from tensorflow.keras.layers import Dense, Dropout, Flatten\n",
     "    from tensorflow.keras.layers import Conv2D, MaxPooling2D\n",
@@ -112,103 +119,101 @@
     "    from tensorflow.keras import backend as K\n",
     "\n",
     "    import math\n",
-    "    \n",
-    "    from hops import tensorboard    \n",
-    "    from hops import model as hopsworks_model\n",
+    "    from hops import tensorboard\n",
     "\n",
-    "    batch_size = 32\n",
+    "    from hops import model as hops_model\n",
+    "    from hops import hdfs\n",
+    "\n",
+    "    batch_size=32\n",
+    "    \n",
     "    num_classes = 10\n",
-    "    epochs = 10\n",
-    "    steps_per_epoch = 10\n",
-    "    kernel = 4\n",
-    "    pool = 4\n",
-    "    dropout = 0.5\n",
-    "\n",
-    "    # Input image dimensions\n",
-    "    img_rows, img_cols = 28, 28\n",
-    "\n",
-    "    # The data, shuffled and split between train and test sets\n",
-    "    (x_train, y_train), (x_test, y_test) = mnist.load_data()\n",
-    "\n",
-    "    if K.image_data_format() == 'channels_first':\n",
-    "        x_train = x_train.reshape(x_train.shape[0], 1, img_rows, img_cols)\n",
-    "        x_test = x_test.reshape(x_test.shape[0], 1, img_rows, img_cols)\n",
-    "        input_shape = (1, img_rows, img_cols)\n",
-    "    else:\n",
-    "        x_train = x_train.reshape(x_train.shape[0], img_rows, img_cols, 1)\n",
-    "        x_test = x_test.reshape(x_test.shape[0], img_rows, img_cols, 1)\n",
-    "        input_shape = (img_rows, img_cols, 1)\n",
-    "\n",
-    "    x_train = x_train.astype('float32')\n",
-    "    x_test = x_test.astype('float32')\n",
-    "    x_train /= 255\n",
-    "    x_test /= 255\n",
-    "    print('x_train shape:', x_train.shape)\n",
-    "    print(x_train.shape[0], 'train samples')\n",
-    "    print(x_test.shape[0], 'test samples')\n",
-    "\n",
-    "    # Convert class vectors to binary class matrices\n",
-    "    y_train = keras.utils.to_categorical(y_train, num_classes)\n",
-    "    y_test = keras.utils.to_categorical(y_test, num_classes)\n",
-    "\n",
-    "    model = Sequential()\n",
-    "    model.add(Conv2D(32, kernel_size=(kernel, kernel),\n",
-    "                        activation='relu',\n",
-    "                         input_shape=input_shape))\n",
-    "    model.add(Conv2D(64, (kernel, kernel), activation='relu'))\n",
-    "    model.add(MaxPooling2D(pool_size=(pool, pool)))\n",
-    "    model.add(Dropout(dropout))\n",
-    "    model.add(Flatten())\n",
-    "    model.add(Dense(128, activation='relu'))\n",
-    "    model.add(Dropout(dropout))\n",
-    "    model.add(Dense(num_classes, activation='softmax'))\n",
-    "\n",
-    "    opt = keras.optimizers.Adadelta(1.0)\n",
-    "\n",
-    "    model.compile(loss=keras.losses.categorical_crossentropy,\n",
-    "                      optimizer=opt,\n",
-    "                      metrics=['accuracy'])\n",
-    "\n",
-    "    tb_callback = TensorBoard(log_dir=tensorboard.logdir(), histogram_freq=0,\n",
-    "                             write_graph=True, write_images=True, profile_batch='5,10')\n",
-    "    callbacks = [tb_callback]\n",
-    "\n",
-    "    model.fit(x_train, y_train,\n",
-    "             batch_size=batch_size,\n",
-    "             callbacks=callbacks,\n",
-    "             epochs=epochs,\n",
-    "             steps_per_epoch=steps_per_epoch,\n",
-    "             verbose=1,\n",
-    "             validation_data=(x_test, y_test))\n",
     "    \n",
-    "    score = model.evaluate(x_test, y_test, \n",
-    "                           verbose=0, \n",
-    "                           batch_size=10, \n",
-    "                           steps=10)\n",
+    "    # Provide path to train and validation datasets\n",
+    "    train_filenames = [hdfs.project_path() + \"TourData/mnist/train/train.tfrecords\"]\n",
+    "    validation_filenames = [hdfs.project_path() + \"TourData/mnist/validation/validation.tfrecords\"]\n",
+    "    \n",
+    "    # Define input function\n",
+    "    def data_input(filenames, batch_size=32, num_classes = 10, shuffle=False, repeat=None):\n",
     "\n",
-    "    # Export model as savedModel\n",
-    "    export_path = tensorboard.logdir() + '/SavedModel'\n",
+    "        def parser(serialized_example):\n",
+    "            \"\"\"Parses a single tf.Example into image and label tensors.\"\"\"\n",
+    "            features = tf.io.parse_single_example(\n",
+    "                serialized_example,\n",
+    "                features={\n",
+    "                    'image_raw': tf.io.FixedLenFeature([], tf.string),\n",
+    "                    'label': tf.io.FixedLenFeature([], tf.int64),\n",
+    "                })\n",
+    "            image = tf.io.decode_raw(features['image_raw'], tf.uint8)\n",
+    "            image.set_shape([28 * 28])\n",
     "\n",
-    "    tf.keras.models.save_model(\n",
-    "        model,\n",
-    "        export_path,\n",
-    "        overwrite=True,\n",
-    "        include_optimizer=True,\n",
-    "        save_format=None,\n",
-    "        signatures=None,\n",
-    "        options=None\n",
+    "            # Normalize the values of the image from the range [0, 255] to [-0.5, 0.5]\n",
+    "            image = tf.cast(image, tf.float32) / 255 - 0.5\n",
+    "            label = tf.cast(features['label'], tf.int32)\n",
+    "    \n",
+    "            # Create a one hot array for your labels\n",
+    "            label = tf.one_hot(label, num_classes)\n",
+    "            \n",
+    "            return image, label\n",
+    "\n",
+    "        # Import MNIST data\n",
+    "        dataset = tf.data.TFRecordDataset(filenames)\n",
+    "\n",
+    "        # Map the parser over dataset, and batch results by up to batch_size\n",
+    "        dataset = dataset.map(parser)\n",
+    "        if shuffle:\n",
+    "            dataset = dataset.shuffle(buffer_size=128)\n",
+    "        dataset = dataset.batch(batch_size, drop_remainder=True)\n",
+    "        dataset = dataset.repeat(repeat)\n",
+    "        return dataset\n",
+    "\n",
+    "    # Define a Keras Model.\n",
+    "    model = tf.keras.Sequential()\n",
+    "    model.add(tf.keras.layers.Dense(128, activation='relu', input_shape=(784,)))\n",
+    "    model.add(tf.keras.layers.Dense(num_classes, activation='softmax'))\n",
+    "\n",
+    "    # Compile the model.\n",
+    "    model.compile(loss=tf.keras.losses.categorical_crossentropy,\n",
+    "                  optimizer= tf.keras.optimizers.Adam(0.001),\n",
+    "                  metrics=['accuracy']\n",
+    "                 )\n",
+    "        \n",
+    "    callbacks = [\n",
+    "        tf.keras.callbacks.TensorBoard(log_dir=tensorboard.logdir()),\n",
+    "        tf.keras.callbacks.ModelCheckpoint(filepath=tensorboard.logdir()),\n",
+    "    ]\n",
+    "    model.fit(data_input(train_filenames, batch_size), \n",
+    "        verbose=0,\n",
+    "        epochs=3, \n",
+    "        steps_per_epoch=5,\n",
+    "        validation_data=data_input(validation_filenames, batch_size),\n",
+    "        validation_steps=1,                    \n",
+    "        callbacks=callbacks\n",
     "    )\n",
     "    \n",
-    "    metrics = {'accuracy': score[1], 'loss': score[0]}\n",
+    "    score = model.evaluate(data_input(validation_filenames, batch_size), steps=1)\n",
+    "\n",
+    "    # Export model\n",
+    "    # WARNING(break-tutorial-inline-code): The following code snippet is\n",
+    "    # in-lined in tutorials, please update tutorial documents accordingly\n",
+    "    # whenever code changes.\n",
+    "\n",
+    "    export_path = os.getcwd() + '/model-' + str(uuid.uuid4())\n",
+    "    print('Exporting trained model to: {}'.format(export_path))\n",
     "    \n",
-    "    hopsworks_model.export(export_path, 'mnist', metrics=metrics)\n",
+    "    tf.saved_model.save(model, export_path)\n",
+    "\n",
+    "    print('Done exporting!')\n",
+    "    \n",
+    "    metrics = {'accuracy': score[1]}\n",
+    "    \n",
+    "    hops_model.export(export_path, \"mnist\", metrics=metrics)    \n",
     "    \n",
     "    return metrics"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +222,7 @@
      "text": [
       "Finished Experiment \n",
       "\n",
-      "('hdfs://rpc.namenode.service.consul:8020/Projects/demo_deep_learning_admin000/Experiments/application_1598535004204_0010_4', {'accuracy': 0.9200000166893005, 'loss': 0.34505602717399597, 'log': 'Experiments/application_1598535004204_0010_4/output.log'})"
+      "('hdfs://rpc.namenode.service.consul:8020/Projects/demo_ml_meb10000/Experiments/application_1621614908761_0013_7', {'accuracy': 0.78125, 'log': 'Experiments/application_1621614908761_0013_7/output.log'})"
      ]
     }
    ],
@@ -227,6 +232,13 @@
     "\n",
     "experiment.launch(keras_mnist, name='keras mnist', local_logdir=True, metric_key='accuracy')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
