--- a/notebooks/featurestore/hsfs/online_transformations/online_transformations.ipynb
+++ b/notebooks/featurestore/hsfs/online_transformations/online_transformations.ipynb
@@ -65,7 +65,13 @@
    "metadata": {},
    "source": [
     "# Define online transformation\n",
-    "To be able to attach transformation function to training datasets it has to be part of library installed in Hopsworks. Please refer to [documentation](https://hopsworks.readthedocs.io/en/stable/user_guide/hopsworks/python.html?highlight=install#installing-libraries) how to install python libraries in Hopsworks. When defining transformation function don't decorate with spark @udf or @pandas_udfs, as well as don't use any spark dependencies. HSFS will decorate transformation function only if it is used inside spark application.\n"
+    "To be able to attach transformation function to training datasets it has to be either part of the library\n",
+    "[installed](https://hopsworks.readthedocs.io/en/stable/user_guide/hopsworks/python.html?highlight=install#installing-libraries) in Hopsworks\n",
+    "or attached when starting a [Jupyter notebook](https://hopsworks.readthedocs.io/en/stable/user_guide/hopsworks/jupyter.html?highlight=jupyter)\n",
+    "or [Hopsworks job](https://hopsworks.readthedocs.io/en/stable/user_guide/hopsworks/jobs.html).\n",
+    "\n",
+    "Don't decorate transformation function with Pyspark `@udf` or `@pandas_udf`, as well as don't use any Pyspark dependencies.\n",
+    "    HSFS will decorate transformation function only if it is used inside Pyspark application.\n"
    ]
   },
   {
@@ -577,18 +583,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "PySpark",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "pysparkkernel"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
-    "name": "python",
+    "name": "ipython",
     "version": 3
    },
+   "file_extension": ".py",
    "mimetype": "text/x-python",
-   "name": "pyspark",
-   "pygments_lexer": "python3"
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
